<?xml version="1.0"?>
<package>
  <name>docking_planner</name>
  <version>1.0.0</version>
  <description>docking planner for mobile robots</description>
  <maintainer email="k.promsutipong@gmail.com">Kengkij Promsutipong</maintainer>
  <license>MIT</license>
  <author email="k.promsutipong@gmail.com">Kengkij Promsutipong</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rtabmap_ros</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
